--- a/src/content/graphos/cloud-routing/dedicated/lattice.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/lattice.mdx
@@ -1,5 +1,5 @@
 ---
-title: Configure Amazon VPC Lattice
+title: Amazon VPC Lattice configuration
 subtitle: Securely communicate with subgraphs on your Amazon VPC
 description: Configure Amazon VPC Lattice to send traffic to and receive traffic from your Apollo Cloud Dedicated router.
 ---
@@ -252,7 +252,7 @@ The last step is associating your resource share a particular graph in GraphOS.
 <Note>
 
 - You have 12 hours to associate your resource share—otherwise, AWS RAM will fail to process the invitation, and you will have to restart this step.
-- For security purposes, we recommend you continue to the next step immediately after creating the resource share. If you see that the resource share was **Accepted** or **Failed** in the AWS console and you did not follow step 4 of this guide, follow the steps to [remove access to private subgraphs](./lattice-management#remove-access-to-private-subgraphs) and restart this step.
+- For security purposes, we recommend you continue to the next step immediately after creating the resource share. If you see that the resource share was **Accepted** or **Failed** in the AWS console and you did not follow step 4 of this guide, follow the steps to [remove access to private subgraphs](./lattice-management#remove-access) and restart this step.
 
 </Note>
 
