Fix spelling mistake

--- a/src/content/graphos/enterprise/supergraph-architecture-framework/security.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/security.mdx
@@ -21,4 +21,4 @@ The supergraph is a central place where data of all different types and quantity
 
 ### Protect upstream resources in the supergraph
 
-Enterprise supergraphs will connect clients to many different APIs and with all those connections, the risk for unintentional service impacts increase. API teams that previously may have not had to think about the dangers of exposing their data to other outside their team or organization, may not have though about the amount of traffic volume they need to handle. We also want to prevent any accident from propogating to impacting other services connected to the supergraph. Using tools like operation safelisting, circuit breakers, and rate limiting can make sure our resources are given the chance to handle expected usage of their API.
+Enterprise supergraphs will connect clients to many different APIs and with all those connections, the risk for unintentional service impacts increase. API teams that previously may have not had to think about the dangers of exposing their data to other outside their team or organization, may not have though about the amount of traffic volume they need to handle. We also want to prevent any accident from propagating to impacting other services connected to the supergraph. Using tools like operation safelisting, circuit breakers, and rate limiting can make sure our resources are given the chance to handle expected usage of their API.
