--- a/src/content/graphos/cloud-routing/dedicated/lattice.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/lattice.mdx
@@ -107,7 +107,7 @@ flowchart LR;
 7. Review your targets to make sure all information is correct.
 8. Click **Create target group** at the bottom right corner of the page.
 
-Congratulations! You've created an Amazon VPC Lattice target group. Repeat this process for each subgraph you want to share with GraphOS.
+Congratulations! You've created an Amazon VPC Lattice target group. Repeat this process for each resource you want to share with GraphOS.
 
 ## Step 2. Create a Lattice service
 
