Rename overview page and create redirect

--- a/src/content/graphos/metrics/notifications/index.mdx
+++ b/src/content/graphos/metrics/notifications/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: Setting up GraphOS notifications
-subtitle: Set up notifications for graph performance, schema changes, and more
+title: GraphOS notifications
+subtitle: Learn about supported notification types and channels
 description: Set up notifications for your GraphQL graph's performance, schema changes, and more. Stay updated and address issues effectively using custom alerts.
 ---
 
@@ -12,15 +12,19 @@ If you don't have a GraphOS organization yet, [get started here](../../quickstar
 
 </Tip>
 
-## Supported notifications and channels
+## Notification types
 
-GraphOS can send your team the following notification types:
+GraphOS supports the following notification types:
 
 - [Daily reports](./daily-reports) of your graph's request rate, error rate, and latency
 - [Performance alerts](./performance-alerts) whenever a metric such as error percentage or request latency exceeds a particular threshold (this experimental feature requires a [paid plan](https://www.apollographql.com/pricing/))
 - [Schema change notifications](./schema-change-integration) whenever your graph's schema is updated
 - [Schema proposal notifications](./schema-proposal-integration) whenever a schema proposal is created or revised, or if its status changes
 - [Build status notifications](./build-status-notification) whenever Apollo attempts to compose a supergraph schema for your federated graph (this preview feature is [enterprise only](https://www.apollographql.com/pricing/))
+
+Refer to the specific notification type doc for setup instructions.
+
+## Supported channels
 
 GraphOS can send each of these notification types to the channel(s) indicated:
 
